[package]
name = "rate_limiter"
version = "0.1.0"
edition = "2024"
description = "A production-grade rate limiting library In RUST"
license = "MIT"
authors = ["Sameer Gupta <samir1672007@gmail.com>"]

[dependencies]
async-trait = "0.1.89"
axum = "0.8.7"
dashmap = "6.1.0"
redis = {version = "1.0.0", features = ["tokio-comp"]}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.8"
